sidebar tabs added

--- a/wikipedia.html
+++ b/wikipedia.html
@@ -6,116 +6,137 @@
     <title>Seattle Wikipedia</title>
   </head>
   <body>
-    <div class="container">
-      <div class="jumbotron">
-        <h1>Welcome to Wikipedia</h1>
-          <p>Life in Seattle, WA</p>
-          <ul>
-            <li><a href="#">Arts</a></li>
-            <li><a href="#">Biography</a></li>
-            <li><a href="#">Geography</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Mathematics</a></li>
-            <li><a href="#">Science</a></li>
-          </ul>
-        </div>
+
+    <div class="navi">
+      <h3>Wikipedia</h3>
+        <img src="photos/wiki.jpg" alt="photo of wiki">
+        <p>Main Page</p>
+        <ul>
+          <li><a href="#">Contents</a></li>
+          <li><a href="#">Featured Contents</a></li>
+          <li><a href="#">Current Events</a></li>
+          <li><a href="#">Random Article</a></li>
+          <li><a href="#">Donation</a></li>
+          <li><a href="#">Wikipedia Store</a></li>
+        </ul>
+        <p>Interactions</p>
+        <ul>
+          <li><a href="#">Help</li>
+          <li><a href="#">About Wikipedia</a></li>
+          <li><a href="#">Community Portal</a></li>
+          <li><a href="#">Recent Changes</a></li>
+          <li><a href="#">Contact Page</a></li>
+        </ul>
+        <p>Tools</p>
+        <ul>
+          <li><a href="#">What Links Here</a></li>
+          <li><a href="#">Related Changes</a></li>
+          <li><a href="#">Upload File</a></li>
+          <li><a href="#">Special Pages</a></li>
+          <li><a href="#">Permanent link</a></li>
+          <li><a href="#">Page Information</a></li>
+          <li><a href="#">Wikidata item</a></li>
+        </ul>
+        <p>Print/Export</p>
+        <ul>
+          <li><a href="#">Create a Book</a></li>
+          <li><a href="#">Download as PDF</a></li>
+          <li><a href="#">Printable version</a></li>
+        </ul>
+        <p>In other projects</p>
+        <ul>
+          <li><a href="#">Wikimedia Commons</a></li>
+          <li><a href="#">MediaWiki</a></li>
+          <li><a href="#">Meta-Wiki</a></li>
+          <li><a href="#">Wikispecies</a></li>
+          <li><a href="#">Wikibooks</a></li>
+          <li><a href="#">Wikidata</a></li>
+          <li><a href="#">Wikinews</a></li>
+          <li><a href="#">Wikiquote</a></li>
+        </ul>
     </div>
 
-    <h3>Wikipedia</h3>
-      <img src="photos/wiki.jpg" alt="photo of wiki">
-      <p>Main Page</p>
-      <ul>
-        <li><a href="#">Contents</a></li>
-        <li><a href="#">Featured Contents</a></li>
-        <li><a href="#">Current Events</a></li>
-        <li><a href="#">Random Article</a></li>
-        <li><a href="#">Donation</a></li>
-        <li><a href="#">Wikipedia Store</a></li>
-      </ul>
-      <p>Interactions</p>
-      <ul>
-        <li><a href="#">Help</li>
-        <li><a href="#">About Wikipedia</a></li>
-        <li><a href="#">Community Portal</a></li>
-        <li><a href="#">Recent Changes</a></li>
-        <li><a href="#">Contact Page</a></li>
-      </ul>
-      <p>Tools</p>
-      <ul>
-        <li><a href="#">What Links Here</a></li>
-        <li><a href="#">Related Changes</a></li>
-        <li><a href="#">Upload File</a></li>
-        <li><a href="#">Special Pages</a></li>
-        <li><a href="#">Permanent link</a></li>
-        <li><a href="#">Page Information</a></li>
-        <li><a href="#">Wikidata item</a></li>
-      </ul>
-      <p>Print/Export</p>
-      <ul>
-        <li><a href="#">Create a Book</a></li>
-        <li><a href="#">Download as PDF</a></li>
-        <li><a href="#">Printable version</a></li>
-      </ul>
-      <p>In other projects</p>
-      <ul>
-        <li><a href="#">Wikimedia Commons</a></li>
-        <li><a href="#">MediaWiki</a></li>
-        <li><a href="#">Meta-Wiki</a></li>
-        <li><a href="#">Wikispecies</a></li>
-        <li><a href="#">Wikibooks</a></li>
-        <li><a href="#">Wikidata</a></li>
-        <li><a href="#">Wikinews</a></li>
-        <li><a href="#">Wikiquote</a></li>
-      </ul>
+  <div class="row">
+  <div class="container">
+    <div class="panel panel-info">
+      <div class="panel-heading">
 
-    <div class="container">
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h3 class="panel-title">Team Spirit</h3>
-        </div>
-            <img class="one" src="photos/seahawks.jpeg" alt="a photo of seattle seahawks logo">
+    <ul class="nav nav-tabs">
+      <li role="presentation" class="active"><a href="#">Main page</a></li>
+      <li role="presentation"><a href="#">Read</a></li>
+      <li role="presentation"><a href="#">View Source</a></li>
 
-            <p>The Seattle Seahawks are a professional American football franchise based in Seattle, Washington. The Seahawks compete in the National Football League as a member club of the league's National Football Conference West division. They joined the NFL in 1976 as an expansion team. The Seahawks are coached by Pete Carroll. Their home stadium is currently known as Century Link Field.</p>
+    <div class="jumbotron">
+      <h1>Welcome to Wikipedia</h1>
+        <p>Life in Seattle, WA</p>
+        <ul>
+          <li><a href="#">Arts</a></li>
+          <li><a href="#">Biography</a></li>
+          <li><a href="#">Geography</a></li>
+          <li><a href="#">History</a></li>
+          <li><a href="#">Mathematics</a></li>
+          <li><a href="#">Science</a></li>
+        </ul>
       </div>
 
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h3 class="panel-title">Entrepreneur</h3>
-        </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Team Spirit</h3>
+            </div>
+                <img class="one" src="photos/seahawks.jpeg" alt="a photo of seattle seahawks logo">
 
-          <img class="one" src="photos/billgates.jpg" alt="a photo of Bill Gates">
-          <p>William Henry Gates III, KBE, DFBCS is an American business magnate, investor, author, philanthropist, and humanitarian. He is best known as the principal founder of Microsoft Corporation. Bill Gates was born and raised in Seattle, WA. His net worth is 96.4 billion USD as of 2019</p>
+                <p>The Seattle Seahawks are a professional American football franchise based in Seattle, Washington. The Seahawks compete in the National Football League as a member club of the league's National Football Conference West division. They joined the NFL in 1976 as an expansion team. The Seahawks are coached by Pete Carroll. Their home stadium is currently known as Century Link Field.</p>
+          </div>
       </div>
 
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h3 class="panel-title">Scenery</h3>
-        </div>
+      <div class="col-lg-6">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Entrepreneur</h3>
+            </div>
 
-          <img class="one" src="photos/alkibeach.jpg" alt="a photo of Alki Beach">
-          <p>Alki Beach Park is a 135.9-acre park located in the West Seattle neighborhood of Seattle, Washington that consists of the Elliott Bay beach between Alki Point and Duwamish Head. It has a 0.5 miles of beachfront, and was the first public salt-water bathing beach on the west coast of the United States. It is open daily from 4am to 11:30pm. The beach has a replica of the Statue of Liberty that was installed in 1952. The Alki Point Monument memorializing Seattle's pioneer White settlers is also located in the park.</p>
+              <img class="one" src="photos/billgates.jpg" alt="a photo of Bill Gates">
+              <p>William Henry Gates III, KBE, DFBCS is an American business magnate, investor, author, philanthropist, and humanitarian. He is best known as the principal founder of Microsoft Corporation. Bill Gates was born and raised in Seattle, WA. His net worth is 96.4 billion USD as of 2019</p>
+          </div>
       </div>
 
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h3 class="panel-title">Landmark</h3>
-        </div>
+      <div class="col-lg-6">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Scenery</h3>
+            </div>
 
-          <img class="one" src="photos/spaceneedle.jpg" alt="a photo of the space needle">
-          <p>The Space Needle is an observation tower in Seattle, Washington, a landmark of the Pacific Northwest and an icon of Seattle. It was built in the Seattle Center for the 1962 World's Fair, which drew over 2.3 million visitors. Nearly 20,000 people a day used its elevators. The top stands about 518 feet tall.</p>
+              <img class="one" src="photos/alkibeach.jpg" alt="a photo of Alki Beach">
+              <p>Alki Beach Park is a 135.9-acre park located in the West Seattle neighborhood of Seattle, Washington that consists of the Elliott Bay beach between Alki Point and Duwamish Head. It has a 0.5 miles of beachfront, and was the first public salt-water bathing beach on the west coast of the United States. It is open daily from 4am to 11:30pm. The beach has a replica of the Statue of Liberty that was installed in 1952. The Alki Point Monument memorializing Seattle's pioneer White settlers is also located in the park.</p>
+          </div>
       </div>
 
+      <div class="col-lg-6">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Landmark</h3>
+            </div>
 
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h3 class="panel-title">Tourist Attraction</h3>
-        </div>
-
-          <img class="one" src="photos/pikeplace.jpg" alt="a photo of pike place market">
-          <p>Pike Place Market is a public market overlooking the Elliott Bay waterfront in Seattle. The Market opened August 17, 1907, and is one of the oldest continuously operated public farmers' markets in the United States.</p>
-          <p>Did you know: Before the creation of the Pike Place Market in 1907, local Seattle area farmers sold their goods to the public in a three-square block area called The Lots, located at Sixth Avenue and King Street.</p>
+              <img class="one" src="photos/spaceneedle.jpg" alt="a photo of the space needle">
+              <p>The Space Needle is an observation tower in Seattle, Washington, a landmark of the Pacific Northwest and an icon of Seattle. It was built in the Seattle Center for the 1962 World's Fair, which drew over 2.3 million visitors. Nearly 20,000 people a day used its elevators. The top stands about 518 feet tall.</p>
+          </div>
       </div>
 
+      <div class="col-lg-6">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3 class="panel-title">Tourist Attraction</h3>
+            </div>
+
+              <img class="one" src="photos/pikeplace.jpg" alt="a photo of pike place market">
+              <p>Pike Place Market is a public market overlooking the Elliott Bay waterfront in Seattle. The Market opened August 17, 1907, and is one of the oldest continuously operated public farmers' markets in the United States.</p>
+              <p>Did you know: Before the creation of the Pike Place Market in 1907, local Seattle area farmers sold their goods to the public in a three-square block area called The Lots, located at Sixth Avenue and King Street.</p>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
   </body>
 </html>
